cleaning of aCDM project
Warnings not removed for depreciated getInstance() as this needs more
thinking how to solve